Frequency number input, visualization with canvas.

--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<table>
+<table class="table" border="1">
 <tr>
 <td>
 
 
+<p>Type: <div id="typeString">sine</div></p>
+<p ><input class="typeRange" multiple id="typeRange" type="range" min="1" max="4" step="1" value="1"></input></p>
 
-<p ><input class="typeRange" multiple id="typeRange" type="range" min="1" max="4" step="1" value="1000"></input></p>
+<p>Frequency = <input type="text" id="frequencyNumber" value="1000"></div></p>
 <p ><input class="frequencyRange" multiple id="frequencyRange" type="range" min="5" max="20000" step="1" value="1000"></input></p>
+
+<p>Gain</p>
 <p ><input class="gainRange" multiple id="gainRange" type="range" min="0" max="100" step="1" value="100"></input></p>
-
+<p><button onclick="generate('sine', 1000)">Play!</button></p>
 </td>
-
+<td>
+<canvas width="500" height="500">
+</td>
 
 
 </tr>
 
 </table>
-<p><button onclick="generate('sine', 1000)">Play!</button></p>
+
 
 </body>
